# aiapwn

./: .gitignore  README.md  pyproject.toml
aiapwn/: __main__.py  ai_evaluator.py  ai_generator.py  client.py  config.py  exceptions.py  payload.py  playwright_client.py  recon.py  scanner.py  selenium_client.py  utils.py
aiapwn/payloads/: agent_enum.txt  ai_generated.txt  basic.txt  custom_payload.txt  dan_and_others.txt  grandma_exploits.txt  model_recon.txt  sql_agents.txt  tools_enum.txt
aiapwn/payloads/recon/: basic.txt
aiapwn/reports/: agent_description.txt
